project(PDFHUMMUS)
cmake_minimum_required (VERSION 2.6)

find_package(JPEG REQUIRED)
include_directories(${JPEG_INCLUDE_DIR})

#if(NOT JPEG_FOUND)
#    SET(PDFHUMMUS_NO_DCT TRUE)
#endif(NOT JPEG_FOUND)

FIND_PACKAGE(PkgConfig)

PKG_CHECK_MODULES(ZLIB zlib REQUIRED)

PKG_CHECK_MODULES(LIBTIFF libtiff-4)
if(NOT LIBTIFF_FOUND)
    SET(PDFHUMMUS_NO_TIFF TRUE)
else(NOT LIBTIFF_FOUND)
    ADD_DEFINITIONS(-D_INCLUDE_TIFF_HEADER)
endif(NOT LIBTIFF_FOUND)

PKG_CHECK_MODULES(FREETYPE REQUIRED freetype2)

ADD_SUBDIRECTORY(LibAesgm)

ADD_SUBDIRECTORY(PDFWriter)
#ADD_SUBDIRECTORY(PDFWriterTestPlayground)
