project(PDFHUMMUS)
cmake_minimum_required (VERSION 2.6)

find_package(JPEG REQUIRED)

FIND_PACKAGE(PkgConfig)

PKG_CHECK_MODULES(ZLIB zlib REQUIRED)

PKG_CHECK_MODULES(LIBTIFF libtiff-4 REQUIRED)
ADD_DEFINITIONS(-D_INCLUDE_TIFF_HEADER)

PKG_CHECK_MODULES(FREETYPE REQUIRED freetype2)

ADD_SUBDIRECTORY(LibAesgm)

ADD_SUBDIRECTORY(PDFWriter)
#ADD_SUBDIRECTORY(PDFWriterTestPlayground)
